GUI-1164 Use backfac-visibility:hidden to fix dispaly datacart issue in mac chrome

--- a/stylesheets/less/partials/datastore.less
+++ b/stylesheets/less/partials/datastore.less
@@ -1089,6 +1089,7 @@ input {
 #dataCart {
     margin-left: 12px;
     background-color: @color-background-darkGray;
+    backface-visibility: hidden;
 
     .selectedTable {
         margin: 10px 0 20px 0;
